# object-detection-tensorrt-example

./: .gitmodules  CMakeLists.txt  README.md  setup_camera.sh  setup_environment.sh  setup_server.sh  wrapper
SSD_Model/: detect_objects_webcam.py
include/: cudnn.h
src/: detectrt  detectrt.py
src/plugin/: CMakeLists.txt  InferPlugin.cpp
src/utils/: inference.py  model.py
